--- a/src/components/MovieCard/styles.scss
+++ b/src/components/MovieCard/styles.scss
@@ -5,12 +5,18 @@
   color: #C2CFE0;
   margin: 0 0 10px;
   border: 1px solid #d3d3d3;
-  transition: ease-in 0.5s;
+  transition: ease-in 0.35s;
   &:hover {
-    box-shadow: 2px 2px 12px 2px #d3d3d34f;
+    box-shadow: 3px 3px 12px 2px #d3d3d34f;
+    transform: translateY(-10px);
+    background-color: #005D7A;
   }
-  &:hover &__overlay {
-    display: flex;
+  // &:hover &__overlay {
+  //   display: flex;
+  // }
+  &__link {
+    text-decoration: none;
+    color: #C2CFE0;
   }
   &__img {
     width: 100%;
@@ -39,18 +45,18 @@
   &__title {
     margin-top: 5px;
   }
-  &__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: #C2CFE0cc;
-    transition: ease-in .5s;
-  }
+  // &__overlay {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   display: none;
+  //   justify-content: center;
+  //   align-items: center;
+  //   width: 100%;
+  //   height: 100%;
+  //   background-color: #C2CFE0cc;
+  //   transition: ease-in .5s;
+  // }
 }
 
 
